<resources>
    <string name="app_name">Google</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm!</string>
    <string name="create_your_google_account">Create your Google Account</string>
    <string name="use_8_or_more_characters_with_a_mix_of_letters_numbers_and_symbols">Use 8 or more characters with a mix of letters, numbers &amp; symbols</string>
    <string name="use_my_current_email_address_instead">Use my current email address instead</string>
    <string name="you_can_use_letters_numbers_and_periods">You can use letters, numbers and periods</string>
    <string name="username">Username</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="show_password">Show password</string>
    <string name="next">Next</string>
    <string name="registration_succeeded">Registration Succeeded</string>
    <string name="shouldmatch">Passwords should match</string>
    <string name="link">Link</string>

    <string name="registration_notsucceeded">Registration Not Succeeded</string>
    <string name="pass">Use 8 or more characters with a mix of letters, numbers &amp; symbols for your password</string>

</resources>