<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/googlelogo" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="413dp"
        android:layout_height="49dp"
        android:id="@+id/creatAc"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_your_google_account"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PersonName"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creatAc" >
        <com.google.android.material.textfield.TextInputEditText
            style="Widget.regestr.TextView"
            android:background="@color/white"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastname"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@color/white"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@id/PersonName"
        app:layout_constraintTop_toBottomOf="@id/creatAc" >>
        <com.google.android.material.textfield.TextInputEditText
            style="Widget.regestr.TextView"
            android:background="@color/white"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        app:suffixText="\@gmail.com"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastname" >>
        <com.google.android.material.textfield.TextInputEditText
            style="Widget.regestr.TextView"
            android:background="@color/white"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="413dp"
        android:layout_height="49dp"
        android:id="@+id/rule"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/you_can_use_letters_numbers_and_periods"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="413dp"
        android:layout_height="30dp"
        android:id="@+id/usecrrent"
        android:textColor="@color/purple_700"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/use_my_current_email_address_instead"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rule" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPassword"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usecrrent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:background="@color/white"
            android:hint="@string/password"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextConfirmPassword2"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        app:passwordToggleEnabled="false"
        android:inputType="numberPassword"
        app:layout_constraintStart_toEndOf="@id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@id/usecrrent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="155dp"
            android:background="@color/white"
            android:inputType="numberPassword"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rule2"
        android:layout_width="413dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/use_8_or_more_characters_with_a_mix_of_letters_numbers_and_symbols"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextConfirmPassword2" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ch"
        android:checked="false"
        android:text="@string/show_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/rule2"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/useemail"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:background="@color/white"
        android:textColor="@color/purple_700"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_instead"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ch" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="8dp"
        android:text="@string/next"
        app:layout_constraintStart_toEndOf="@id/useemail"
        app:layout_constraintTop_toBottomOf="@id/ch" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
